@@ -1,11 +1,14 @@
 CHANGES.txt for Gem Drop Deluxe
 
-May 12, 2021
+May 13, 2021
 
  * Added "[esc] to exit" kind of message to Help screen.
 
  * Visual feedback (background color change) when
    a bomb or clock piece are used.
+
+ * Showing (in-game during gameplay, and on the title/menu,
+   when your game ends) when you have acheived a high score.
 
  * Tweaks to custom title/help font.
 
